--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "bash ./tools/build.sh",
     "watch": "ts-node ./tools/watch.ts",
     "publish": "ts-node ./tools/publish.ts",
-    "deploy": "bash ./tools/deploy.sh"
+    "deploy": "bash ./tools/deploy.sh",
+    "test": "mocha -r ts-node/register ./services/tests/**/*.test.ts"
   },
   "author": "",
   "license": "",
@@ -23,11 +24,13 @@
   "devDependencies": {
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
+    "@types/chai": "^4.2.7",
     "@types/ejs": "^2.6.3",
     "@types/highlight.js": "^9.12.3",
     "@types/markdown-it": "0.0.7",
     "@types/mocha": "^5.2.6",
     "@types/node": "^11.11.3",
+    "chai": "^4.2.0",
     "mocha": "^6.0.2",
     "node-sass": "^4.11.0",
     "parcel-bundler": "^1.12.2",
