--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "highlight.js": "^9.15.6",
     "katex": "^0.10.2",
     "markdown-it": "^8.4.2",
+    "markdown-it-anchor": "^5.3.0",
+    "markdown-it-container": "^3.0.0",
     "markdown-it-footnote": "^3.0.1",
+    "markdown-it-table-of-contents": "^0.4.4",
     "markdown-it-texmath": "^0.5.5"
   },
   "devDependencies": {
