feat: Add table of contents to article

--- a/services/config.json
+++ b/services/config.json
@@ -1,4 +1,7 @@
 {
   "blogTitle": "Lorem Ipsum",
-  "blogSubtitle": "lorem ipsum"
+  "blogSubtitle": "lorem ipsum",
+  "article": {
+    "tableOfContents": true 
+  }
 }
