--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "http-server ./dist",
+    "start": "live-server ./dist --no-browser",
+    "watch": "tsx ./tools/watch.ts",
+    "publish": "tsx ./tools/publish.ts",
     "build": "bash ./tools/build.sh",
-    "publish": "ts-node ./tools/publish.ts",
     "deploy": "bash ./tools/deploy.sh"
   },
   "author": "parksb",
@@ -39,6 +40,7 @@
     "eslint-plugin-import": "^2.26",
     "html-minifier": "^4.0.0",
     "http-server": "^14.1.0",
+    "live-server": "^1.1.0",
     "markdown-it": "^13.0",
     "markdown-it-anchor": "^8.6",
     "markdown-it-container": "^3.0",
@@ -49,6 +51,8 @@
     "markdown-it-table-of-contents": "^0.6",
     "markdown-it-texmath": "^0.9",
     "ts-node": "^10.7",
-    "typescript": "^4.6"
+    "tsx": "^3.12.7",
+    "typescript": "^4.6",
+    "watcher": "^2.2.2"
   }
 }
